Horizontal Overflow Fix

--- a/public/style.scss
+++ b/public/style.scss
@@ -33,7 +33,7 @@ body {
 
     font-family: 'Minecraft';
     margin: 0;
-    width: 100vw;
+    width: 100%;
     // height: 100vh;
     min-height: 100vh;
     // max-width: 100vw;
@@ -61,6 +61,7 @@ body {
             margin-top: 5px;
             width: 85vw;
             max-width: 924px;
+            max-height: 500px;
             background-color: rgba(2, 2, 2, 0.3);
             display: flex;
             flex-direction: column;
@@ -298,12 +299,12 @@ body {
         flex-direction: row;
         justify-content: space-between;
         align-items: stretch;
-        width: 100vw;
+        width: 100%;
     }
 
 }
 
-@media all and (min-width: 1270px) {
+@media all and (min-width: 768px) {
     body {
         align-items: stretch;
 
